footer breadcrumb alignment fix

--- a/_css/responsive.css
+++ b/_css/responsive.css
@@ -190,6 +190,18 @@
         flex-wrap: wrap;
     }
 
+    .footer-breadcrumbs {
+        align-items: center;
+    }
+
+    .footer-breadcrumbs p{
+        display: inline-block;
+    }
+
+    .copyright {
+        margin-top: var(--size-20);
+    }
+
 }
 
 @media screen and (max-width: 480px) {
